# rktkm

./: .gitignore  CMakeLists.txt  FilenameHelpers.hpp  MPFRMatrix.hpp  MPFRVector.hpp  OrderConditionHelpers.cpp  OrderConditionHelpers.hpp  QuadraticLineSearcher.hpp  README.md  RK_10_16.ipp  bfgs_subroutines.cpp  bfgs_subroutines.hpp  compile-gcc.sh  linalg_subroutines.cpp  linalg_subroutines.hpp  nonlinear_optimizers.hpp  objective_function.cpp  objective_function.hpp  rksearch_main.cpp
